# opam-gui

./: .drom  .gitignore  CHANGES.md  Makefile  Makefile.config  Makefile.old  README.md  _opam  drom.toml  dune  dune-project  dune-project.old  ez-opam.opam  opam-gui-js.install  opam-gui-js.opam  opam-gui.install  opam-gui.opam  opam-gui.opam.old  openapi.json
.github/workflows/: workflow.yml
docs/: index.html
docs/doc/: index.html
docs/sphinx/: index.html
scripts/: api.service
share/opam-gui-js/www/: dune  index.html
share/opam-gui-js/www/css/: dune
share/opam-gui-js/www/js/: dune  opam-gui-js.js
sphinx/: about.rst  conf.py  index.rst  install.rst
src/: dune
src/api/: api.ml  api_server.ml  doc.ml  dune  dune.old  encoding.ml  handlers.ml  handlers.mli  opam_gui.ml  services.ml
src/common/: dune  encoding.ml  globals.ml  opamUtils.ml  opamUtils.mli  services.ml  types.ml  utils.ml
src/config/: dune
src/db/: db.ml  dune  opam.ml  opam.mli  opam_lwt.ml
src/misc/: dune  misc.ml
src/opam-gui/: dune  handlers.ml  index.mld  main.ml
src/opam-gui-js/: common.ml  dune  dune.old  index.mld  misc_js.ml  request.ml  request.mli  v.ml
src/opam-gui_lib/: index.mld
src/openapi/: dune  openapi.ml
src/ui/: common.ml  dune  dune.old  main_ui.ml  request.ml  request.mli  route.ml  v.ml
static/: index.html
test/output-tests/: dune
