opam-version: "2.0"
synopsis: "A GUI for Opam"
maintainer: ["david.declerck@ocamlpro.com"]
authors: ["Fabrice Le Fessant" "David Declerck"]
license: "MIT"
homepage: "https://github.com/OCamlPro/opam-gui"
bug-reports: "https://github.com/OCamlPro/opam-gui/-/issues"
depends: [
  "dune" {>= "2.4"}
  "vue-jsoo"
  "ez-api"
  "calendar"
  "geoip"
  "cohttp-lwt-unix"
  "ez_file"
  "opam-file-format"
  "re"
  "opam-format"
  "opam-state"
  "ocplib_stuff"
]
build: [
  [ make "config" ]
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
install: [
  [ "mkdir" "-p" bin share ]
  [ "cp" "-f" "_build/default/src/api/opam_gui.exe" "%{bin}%/opam-gui" ]
  [ "cp" "-R" "www" "%{share}%/www" ]
]
dev-repo: "git://github.com/OCamlPro/opam-gui"
pin-depends: [
  [ "ez-api.~dev" "git+https://github.com/ocamlpro/ez-api.git" ]
]
