(library
 (name ezopam_services)
 (wrapped false)
 (modules encoding services)
 (libraries ez-api.common ezopam_common))

(library
 (name ezopam_api)
 (wrapped false)
 (modules handlers api)
 (libraries ez-api.server ezopam_services ezopam_db))

(executable
 (name api_server)
 (modules api_server)
 (libraries ezopam_api))

(executable
 (name openapi)
 (modules openapi doc)
 (libraries ezopam_api))
