(library
 (name ezopam_miscjs)
 (modules misc_js)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_of_ocaml))

(library
 (name ezopam_ui)
 (wrapped false)
 (modules common v request route)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries ezopam_common ezopam_miscjs vue-jsoo ez-api.xhr))

(executable
 (name main_ui)
 (modules main_ui)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries ezopam_ui)
 (modes js)
 (js_of_ocaml
  (flags (:standard --no-sourcemap))))
